# scon

./: .gitattributes  .gitignore  Cargo.toml  README.md  package.json  peer.md  scon.tex
bench/: README.md  bench.mjs  bench.php  bench_10mb.php  bench_ext.php  bench_telemetry.php  generate_fixtures.php  generate_telemetry_fixture.php  token_bench.mjs
bench/datasets/: results.json  results_10mb.json
bench/fixtures/: config_records.json  db_exports.json  iot_telemetry.json  iot_telemetry_large.json  isa95_equipment.json  openapi_specs.json  sparkplug_b.json  telemetry_mine.json
ext/: Cargo.toml
ext/.cargo/: config.toml
ext/src/: lib.rs
js/: decoder.js  encoder.js  minifier.js  schema-registry.js  scon.js  tree-hash.js  validator.js
php/: Decoder.php  Encoder.php  Minifier.php  SchemaRegistry.php  Scon.php  TreeHash.php  Validator.php  bootstrap.php
rs/: Cargo.toml
rs/src/: borrowed.rs  decoder.rs  encoder.rs  lib.rs  minifier.rs  schema_registry.rs  tape.rs  treehash.rs  validator.rs  value.rs
src/: decoder.rs  lib.rs  value.rs
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: lib.rs
