# rs/Cargo.toml — SCON core library (standalone, no PHP deps)
[package]
name = "scon-core"
version = "0.1.0"
edition = "2021"
description = "SCON — Schema-Compact Object Notation"

[dependencies]
indexmap = "2"
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
itoa = "1"
ryu = "1"
memchr = "2"
compact_str = "0.9"

[[bin]]
name = "scon-bench"
path = "src/bin/bench.rs"
